fixed 06b-more-exercises/css/town-background.css and add 08-visibility-exercise/visibility.css

--- a/06b-more-exercises/css/town-backgrounds.css
+++ b/06b-more-exercises/css/town-backgrounds.css
@@ -1,7 +1,6 @@
 #cloud-1 {
   background-image: url("../images/cloud.svg");
   background-repeat: no-repeat;
-  background-size: 43px;
   width: 50px;
   height: 40px;
 }
@@ -9,7 +8,6 @@
 #cloud-2 {
   background-image: url("../images/cloud.svg");
   background-repeat: no-repeat;
-  background-size: 48px;
   width: 50px;
   height: 45px;
 }
@@ -17,13 +15,11 @@
 #sun {
   background-image: url("../images/sun.svg");
   background-repeat: no-repeat;
-  background-size: 80px;
 }
 
 #house-1 {
   background-image: url("../images/house-1.svg");
   background-repeat: no-repeat;
-  background-size: 80px;
   width: 80px;
   height: 80px;
 }
@@ -32,7 +28,6 @@
   background-image: url("../images/house-2.svg");
   background-repeat: no-repeat;
   background-position: ;
-  background-size: 55px;
   width: 56px;
   height: 56px;
 }
@@ -41,21 +36,18 @@
   background-image: url("../images/tree.svg");
   background-repeat: no-repeat;
   background-position: ;
-  background-size: 70px;
 }
 
 #palm {
   background-image: url("../images/palm-tree.svg");
   background-repeat: no-repeat;
   background-position: ;
-  background-size: 59px;
 }
 
 #car {
   background-image: url("../images/car.svg");
   background-repeat: no-repeat;
-  background-position: ;
-  background-size: 60px;
+  background-position: bottom left;
   width: 70px;
   height: 70px;
 }
